--- a/standalone/deploy/deployment.yaml
+++ b/standalone/deploy/deployment.yaml
@@ -1,5 +1,5 @@
-kind: DeploymentConfig
-apiVersion: apps.openshift.io/v1
+kind: Deployment
+apiVersion: apps/v1
 metadata:
   name: rclone
   labels:
@@ -9,21 +9,10 @@ metadata:
     app.kubernetes.io/part-of: rclone-app
     app.openshift.io/runtime-namespace: rclone
 spec:
-  strategy:
-    type: Rolling
-    rollingParams:
-      updatePeriodSeconds: 1
-      intervalSeconds: 1
-      timeoutSeconds: 600
-      maxUnavailable: 25%
-      maxSurge: 25%
-    resources: {}
-    activeDeadlineSeconds: 21600
-  triggers:
-    - type: ConfigChange
   replicas: 1
-  revisionHistoryLimit: 10
-  test: false
+  selector:
+  matchLabels:
+    app: rclone
   template:
     metadata:
       creationTimestamp: null
@@ -38,29 +27,24 @@ spec:
         - resources: {}
           terminationMessagePath: /dev/termination-log
           name: rclone
-          command:
-            - rclone
           ports:
             - containerPort: 5572
               protocol: TCP
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: rclone-config
-              mountPath: /opt/rclone-config
+              mountPath: /opt/app-root/src/.rclone-config
           terminationMessagePolicy: File
           image: quay.io/guimou/rclone-ubi8:v0.0.1
-          args:
-            - rcd
-            - '--rc-web-gui'
-            - '--rc-user=admin'
-            - '--rc-pass=pass'
-            - '--rc-serve'
-            - '--cache-dir=/tmp'
-            - '--rc-addr=:5572'
-            - '--s3-v2-auth'
-            - '--config=/opt/rclone-config/rclone.conf'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       securityContext: {}
       schedulerName: default-scheduler
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 25%
+      maxSurge: 25%
+  revisionHistoryLimit: 10
+  progressDeadlineSeconds: 600
