--- a/standalone/deploy/04-route.yaml
+++ b/standalone/deploy/04-route.yaml
@@ -14,4 +14,7 @@ spec:
     weight: 100
   port:
     targetPort: 5572-tcp
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
